[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bladenet"
version = "0.0.1"
authors = [
    { name = "Maxim Kozlov", email = "maximko.ca@gmail.com"}
]
description = "A networking library for games in python"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/hydroko13/bladenet"
Issues = "https://github.com/hydroko13/bladenet/issues"